# data_matomerun

./: .gitignore  README.md
icam2024/: CMakeLists.txt  package.xml
icam2024/launch/: coco1.launch  coco50.launch  dwa1.launch  dwa50.launch  no_steer1.launch  no_steer50.launch  wait_and_go1.launch  wait_and_go50.launch
icam2024/scripts/: all.sh  all_coco1.sh  all_coco50.sh  all_dwa1.sh  all_dwa50.sh  all_no_steer1.sh  all_no_steer50.sh  all_wait_and_go1.sh  all_wait_and_go50.sh  ccv30.sh  ccv60.sh  coco1.sh  coco50.sh  dwa1.sh  dwa50.sh  kill30.sh  no_steer1.sh  no_steer50.sh  wait_and_go1.sh  wait_and_go50.sh
ped_data_rec/: CMakeLists.txt  package.xml
ped_data_rec/launch/: 25ped_data_rec.launch  50ped_data_rec.launch  sample_data_make.launch
ped_data_rec/scripts/: 25ped_rec.sh  50ped.sh  50ped_rec.sh
prediction_accuracy/: CMakeLists.txt  package.xml
prediction_accuracy/config/param/: 25ped_mode0.yaml  25ped_mode1.yaml  25ped_mode2.yaml  50ped_mode0.yaml  50ped_mode1.yaml  50ped_mode2.yaml  xy_50ped_mode0.yaml
prediction_accuracy/launch/: 25ped_mode0.launch  25ped_mode1.launch  25ped_mode2.launch  50ped_mode0.launch  50ped_mode1.launch  50ped_mode2.launch  xy_50ped_mode0.launch
prediction_accuracy/scripts/: 25ped_mode0.sh  25ped_mode1.sh  25ped_mode2.sh  50ped_mode0.sh  50ped_mode1.sh  50ped_mode2.sh  all.sh  xy_50ped_mode0.sh
robomech2024/: CMakeLists.txt  package.xml
robomech2024/launch/: coco1.launch  coco25.launch  coco50.launch  expand1.launch  expand25.launch  (+13 more)
robosym2025/: CMakeLists.txt  package.xml
use_bagfile/: CMakeLists.txt  package.xml
(+130 files in other folders)
