<?xml version="1.0"?>
<package format="2">
  <name>prediction_accuracy</name>
  <version>0.0.0</version>
  <description>The prediction_accuracy package</description>
  <maintainer email="amsl@todo.todo">Iwamura Yuuka</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>